@@ -116,6 +116,25 @@ class CButtonColumn extends CGridColumn
 	 */
 	public $deleteConfirmation;
 	/**
+	 * @var string a javascript function that will be invoked after the delete ajax call.
+	 *
+	 * The function signature is <code>function(link, success)</code>
+	 * <ul>
+	 * <li><code>link</code> references the delete link.</li>
+	 * <li><code>success</code> status of the ajax call, true if the ajax call was successful, false if the ajax call failed.
+	 * </ul>
+	 * Note that if success is true it does not mean that the delete was successful, it only means that the ajax call was successful.
+	 *
+	 * Example:
+	 * <pre>
+	 *  array(
+	 *     class'=>'CButtonColumn',
+	 *     'afterDelete'=>'function(link,success){ if(success) alert("Delete completed successfuly"); }',
+	 *  ),
+	 * </pre>
+	 */
+	public $afterDelete;
+	/**
 	 * @var array the configuration for additional buttons. Each array element specifies a single button
 	 * which has the following format:
 	 * <pre>
@@ -209,14 +228,23 @@ class CButtonColumn extends CGridColumn
 		else
 			$csrf = '';
 
+		if($this->afterDelete===null)
+			$this->afterDelete='function(){};';
+
 		$this->buttons['delete']['click']=<<<EOD
 function() {
 	$confirmation
+	var th=this;
+	var afterDelete=$this->afterDelete
 	$.fn.yiiGridView.update('{$this->grid->id}', {
 		type:'POST',
 		url:$(this).attr('href'),$csrf
 		success:function() {
 			$.fn.yiiGridView.update('{$this->grid->id}');
+			afterDelete(th,true);
+		},
+		error:function() {
+			afterDelete(th,false);
 		}
 	});
 	return false;
