@@ -23,6 +23,7 @@ Version 1.1.7 to be released
 - Enh #1843: Added 'uncheckValue' option to CHtml::activeRadioButtonList and CHtml::activeCheckBoxList. It allows to avoid hidden field rendering (creocoder, Sam Dark)
 - Enh #2013: When creating model with Gii, database field names will be checked to conform with PHP variable naming rules (mdomba)
 - Enh #2068: CTimestampBehavior::timestampExpression can now be a DB expression (Qiang)
+- Enh #2105: Added CButtonCOlumn::afterDelete so that a custom javascript function can be called after after the delete function (mdomba)
 - Enh: Added CGridView::ajaxUpdateError for the possibility to use a custom ajax error handler (mdomba)
 - Enh: Allowed using CController instead of Controller with webapp generated application (Sam Dark)
 - Enh: Added CController::createInlineAction, CInlineAction::inputParams and errorMessage to allow easier override (Qiang)
